# tickets-reservation

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/api/: urls.py
src/api/v1/: urls.py
src/api/v1/theater/: urls.py  views.py
src/api/v1/theater/tests/: test_views.py
src/core/theater/: apps.py  models.py  permissions.py  serializers.py  services.py
src/core/theater/migrations/: 0002_alter_reservedticket_performance.py
src/core/theater/tests/: factories.py  test_services.py
src/main/: settings.py  urls.py
src/theater/: apps.py  models.py  serializers.py  services.py
src/theater/migrations/: 0001_initial.py
